feat: 🎸 Главная: разметка, стилизация

--- a/src/scss/global/fonts.scss
+++ b/src/scss/global/fonts.scss
@@ -7,3 +7,13 @@
 @include mixins.font-face('Inter', normal, 700);
 @include mixins.font-face('Inter', normal, 800);
 @include mixins.font-face('Inter', normal, 900);
+
+@include mixins.font-face('Gilroy', normal, 100);
+@include mixins.font-face('Gilroy', normal, 200);
+@include mixins.font-face('Gilroy', normal, 300);
+@include mixins.font-face('Gilroy', normal, 400);
+@include mixins.font-face('Gilroy', normal, 500);
+@include mixins.font-face('Gilroy', normal, 600);
+@include mixins.font-face('Gilroy', normal, 700);
+@include mixins.font-face('Gilroy', normal, 800);
+@include mixins.font-face('Gilroy', normal, 900);
