--- a/src/scss/global/scaffolding.scss
+++ b/src/scss/global/scaffolding.scss
@@ -19,6 +19,7 @@ body {
 
 	width: 100%;
 	min-height: 100vh;
+	background-color: var(--color-mine-shaft);
 
 	font-family: var(--font-family-default);
 	color: var(--color-mine-shaft);
