--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,4 +26,6 @@
 @use 'blocks/page-footer';
 
 @use 'blocks/main-nav';
-@use 'blocks/modal';
+@use 'blocks/modal';@use 'blocks/callback-button';
+@use 'blocks/heading';
+@use 'blocks/graphic-button';
