--- a/src/components/_base/_base-header.html
+++ b/src/components/_base/_base-header.html
@@ -18,43 +18,82 @@
 
   <header class="page-header">
     <nav class="main-nav">
-      <div class="main-nav__nav-wrapper">
-        <div class="main-nav__container base-container">
+      <div class="main-nav__container base-container">
 
-          <a class="main-nav__logo-link base-link" href="index.html">
-            <svg class="main-nav__logo-icon" width="138" height="61" alt="#">
+        <a class="main-nav__logo-link base-link" href="index.html">
+          <svg class="main-nav__logo-icon" width="127" height="92" alt="Логотип">
+            <use href="img/icon/sprite.svg#logo-icon"></use>
+          </svg>
+        </a>
+
+        <div class="main-nav__nav-menu main-nav__nav-menu--mobile" id="mobile_menu">
+
+          <a class="main-nav__logo-link main-nav__logo-link--mobile base-link" href="index.html">
+            <svg class="main-nav__logo-icon" width="127" height="92" alt="Логотип">
               <use href="img/icon/sprite.svg#logo-icon"></use>
             </svg>
           </a>
 
-          <div class="main-nav__nav-menu main-nav__nav-menu--mobile" id="mobile_menu">
+          <ul class="main-nav__nav-list base-list">
+            <li class="main-nav__nav-item">
+              <a class="main-nav__nav-link base-link" href="#about">О нас</a>
+            </li>
+            <li class="main-nav__nav-item">
+              <a class="main-nav__nav-link base-link" href="#services">Услуги</a>
+            </li>
+            <li class="main-nav__nav-item">
+              <a class="main-nav__nav-link base-link" href="#projects">Проекты</a>
+            </li>
+            <li class="main-nav__nav-item">
+              <a class="main-nav__nav-link base-link" href="#contacts">Контакты</a>
+            </li>
+          </ul>
 
-            <a class="main-nav__logo-link main-nav__logo-link--mobile base-link" href="index.html">
-              <svg class="main-nav__logo-icon" width="138" height="61" alt="#">
-                <use href="img/icon/sprite.svg#logo-icon"></use>
+          <div class="main-nav__nav-side">
+            <div class="main-nav__nav-lang">
+              <a class="main-nav__lang-item main-nav__lang-item--active base-link" href="#">en</a>
+              <a class="main-nav__lang-item base-link" href="#"><span>/</span>por</a>
+              <a class="main-nav__lang-item base-link" href="#"><span>/</span>rus</a>
+              <a class="main-nav__lang-item base-link" href="#"><span>/</span>uk</a>
+            </div>
+
+            <div class="main-nav__nav-socials">
+              <a class="main-nav__socials-item base-link" href="#">
+                <svg class="main-nav__socials-icon" width="27" height="27" aria-hidden="true">
+                  <use href="img/icon/sprite.svg#facebook-icon"></use>
+                </svg>
+              </a>
+              <a class="main-nav__socials-item base-link" href="#">
+                <svg class="main-nav__socials-icon" width="27" height="27" aria-hidden="true">
+                  <use href="img/icon/sprite.svg#whatsapp-icon"></use>
+                </svg>
+              </a>
+              <a class="main-nav__socials-item base-link" href="#">
+                <svg class="main-nav__socials-icon" width="27" height="27" aria-hidden="true">
+                  <use href="img/icon/sprite.svg#tg-icon"></use>
+                </svg>
+              </a>
+              <a class="main-nav__socials-item base-link" href="#">
+                <svg class="main-nav__socials-icon" width="27" height="27" aria-hidden="true">
+                  <use href="img/icon/sprite.svg#inst-icon"></use>
+                </svg>
+              </a>
+            </div>
+
+            <a class="main-nav__nav-phone base-link" href="#">
+              <svg class="main-nav__phone-icon" width="16" height="16" aria-hidden="true">
+                <use href="img/icon/sprite.svg#phone-icon"></use>
               </svg>
+              <span class="main-nav__phone-text">915 855 963</span>
             </a>
 
-            <ul class="main-nav__nav-list base-list">
-              <li class="main-nav__nav-item">
-                <a class="main-nav__nav-link base-link" href="#about">О нас</a>
-              </li>
-              <li class="main-nav__nav-item">
-                <a class="main-nav__nav-link base-link" href="#services">Услуги</a>
-              </li>
-              <li class="main-nav__nav-item">
-                <a class="main-nav__nav-link base-link" href="#projects">Проекты</a>
-              </li>
-              <li class="main-nav__nav-item">
-                <a class="main-nav__nav-link base-link" href="#contacts">Контакты</a>
-              </li>
-            </ul>
-
+            <button class="main-nav__callback callback-button base-button" type="button" id="callback_modal_button">Заказать звонок</button>
           </div>
-          <button class="main-nav__burger base-button" id="burger">
-            <span class="main-nav__burger-line"></span>
-          </button>
+
         </div>
+        <button class="main-nav__burger base-button" id="burger">
+          <span class="main-nav__burger-line"></span>
+        </button>
       </div>
     </nav>
   </header>
