--- a/src/scss/blocks/main-nav.scss
+++ b/src/scss/blocks/main-nav.scss
@@ -83,72 +83,26 @@
 
 // Стили
 .main-nav {
-  position: absolute;
-  top: 0;
-  left: 0;
-
   width: 100%;
   min-width: 50px;
-  height: 89px;
+  height: 92px;
 
-  margin: 24px 0 0 0;
+  padding: 9px 0 0 0;
 
   z-index: 10;
 
-  @include mixins.respond-to(notDesktop) {
-    margin: 23px 0 0 0;
-  }
-
-  &__nav-wrapper {
-    position: relative;
-  }
-
   &__container {
-    // position: relative;
-
     display: flex;
     align-items: center;
-
-    padding: 0 0 19px 0;
-
-    &::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-
-      width: 100%;
-      height: 1px;
-      background-color: var(--color-white);
-      opacity: 0.3;
-
-      @include mixins.respond-to(mobileOnly) {
-        display: none;
-      }
-    }
-
-    @include mixins.respond-to(notDesktop) {
-      justify-content: space-between;
-    }
   }
 
   &__logo-link {
     transition: transform 0.3s;
 
-    @include mixins.respond-to(notDesktop) {
-      margin: 0;
-    }
-
-    @include mixins.respond-to(desktopS) {
-      margin: 0 50px 0 0;
-    }
-
-    @include mixins.respond-to(desktopM) {
-      margin: 0 121px 0 0;
-    }
+    margin: 0 41px 0 0;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
       transition: transform 0.3s;
     }
   }
@@ -174,6 +128,8 @@
     display: flex;
     align-items: center;
 
+    margin: 0 116px 0 0;
+
     @include mixins.respond-to(notDesktop) {
       flex-direction: column;
       align-items: flex-start;
@@ -182,18 +138,10 @@
 
       margin: 0 0 40px 0
     }
-
-    @include mixins.respond-to(desktopS) {
-      margin: 0 30px 0 0;
-    }
-
-    @include mixins.respond-to(desktopM) {
-      margin: 0 97px 0 0;
-    }
   }
 
   &__nav-item {
-    margin: 0 46px 0 0;
+    margin: 0 28px 0 0;
 
     &:last-child {
       margin: 0;
@@ -207,19 +155,17 @@
   }
 
   &__nav-link {
-    font-family: var(--font-family-second);
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 29px;
     color: var(--color-white);
     text-align: center;
-    text-transform: uppercase;
     white-space: nowrap;
 
     transition: color 0.1s;
 
     &:hover {
-      color: var(--color-selective-yellow);
+      color: var(--color-elm);
 
       transition: color 0.1s;
     }
@@ -231,6 +177,108 @@
 
       font-size: 22px;
       text-align: left;
+    }
+  }
+
+  &__nav-side {
+    display: flex;
+    align-items: center;
+  }
+
+  &__nav-lang {
+    display: flex;
+
+    margin: 0 18px 0 0;
+  }
+
+  &__lang-item {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: 0.04em;
+    color: var(--color-silver);
+    text-transform: uppercase;
+
+    transition: color 0.1s;
+
+    & span {
+      color: var(--color-silver);
+    }
+
+    &:hover {
+      color: var(--color-persimmon);
+      transition: color 0.1s;
+
+      & span {
+        color: var(--color-silver);
+      }
+    }
+
+    &--active {
+      color: var(--color-white);
+
+      &:hover {
+        color: var(--color-white);
+      }
+
+      & span {
+        color: var(--color-silver);
+      }
+    }
+  }
+
+  &__nav-socials {
+    display: flex;
+
+    margin: 0 37px 0 0;
+  }
+
+  &__socials-item {
+    margin: 0 9px 0 0;
+
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: translateY(-3px);
+      transition: transform 0.3s;
+    }
+  }
+
+  &__nav-phone {
+    display: flex;
+    align-items: center;
+
+    margin: 0 23px 0 0;
+
+    &:hover {
+      & .main-nav__phone-icon {
+        filter: brightness(0) saturate(100%) invert(65%) sepia(56%) saturate(3855%) hue-rotate(327deg) brightness(103%) contrast(98%);
+
+        transition: filter 0.1s;
+      }
+
+      & .main-nav__phone-text {
+        color: var(--color-persimmon);
+
+        transition: color 0.1s;
+      }
+    }
+  }
+
+  &__phone {
+    display: flex;
+    align-items: center;
+
+    &-icon {
+      margin: 0 6px 0 0;
+    }
+
+    &-text {
+      font-family: var(--font-family-second);
+      font-weight: 400;
+      font-size: 19px;
+      line-height: 30px;
+      color: var(--color-white);
     }
   }
 
