--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -2,11 +2,15 @@
 	// Цвета
 	--color-white: #ffffff;
 	--color-black: #000000;
-	--color-mine-shaft: #303030;
+	--color-mine-shaft: #212121;
+	--color-elm: #1d707a;
+	--color-silver: #bcbcbc;
+	--color-persimmon: #fc7553;
 
 	// Шрифты
 	--font-family-default: 'Inter', system-ui, sans-serif;
+	--font-family-second: 'Gilroy', system-ui, sans-serif;
 
 	// Размер контейнера
-	--container-width: 1300px;
+	--container-width: 1296px;
 }
