--- a/src/scss/global/scaffolding.scss
+++ b/src/scss/global/scaffolding.scss
@@ -51,3 +51,9 @@ input[type=number] {
 	clip: rect(0 0 0 0);
 	overflow: hidden;
 }
+
+.color-elm {
+	color: var(--color-elm);
+
+	transition: color 0.3s;
+}
