--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -6,6 +6,7 @@
 	--color-elm: #1d707a;
 	--color-silver: #bcbcbc;
 	--color-persimmon: #fc7553;
+	--color-silver-chalice: #b0b0b0;
 
 	// Шрифты
 	--font-family-default: 'Inter', system-ui, sans-serif;
