feat: 🎸 Главная: разметка, стилизация

--- a/src/components/_base/_base-header.html
+++ b/src/components/_base/_base-header.html
@@ -57,28 +57,7 @@
               <a class="main-nav__lang-item base-link" href="#"><span>/</span>uk</a>
             </div>
 
-            <div class="main-nav__nav-socials">
-              <a class="main-nav__socials-item base-link" href="#">
-                <svg class="main-nav__socials-icon" width="27" height="27" aria-hidden="true">
-                  <use href="img/icon/sprite.svg#facebook-icon"></use>
-                </svg>
-              </a>
-              <a class="main-nav__socials-item base-link" href="#">
-                <svg class="main-nav__socials-icon" width="27" height="27" aria-hidden="true">
-                  <use href="img/icon/sprite.svg#whatsapp-icon"></use>
-                </svg>
-              </a>
-              <a class="main-nav__socials-item base-link" href="#">
-                <svg class="main-nav__socials-icon" width="27" height="27" aria-hidden="true">
-                  <use href="img/icon/sprite.svg#tg-icon"></use>
-                </svg>
-              </a>
-              <a class="main-nav__socials-item base-link" href="#">
-                <svg class="main-nav__socials-icon" width="27" height="27" aria-hidden="true">
-                  <use href="img/icon/sprite.svg#inst-icon"></use>
-                </svg>
-              </a>
-            </div>
+            @@include('../_bem/_socials.html')
 
             <a class="main-nav__nav-phone base-link" href="#">
               <svg class="main-nav__phone-icon" width="16" height="16" aria-hidden="true">
