--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -7,6 +7,8 @@
 	--color-silver: #bcbcbc;
 	--color-persimmon: #fc7553;
 	--color-silver-chalice: #b0b0b0;
+	--color-mako: #44474d;
+	--color-vivid-tangerine: #ffa088;
 
 	// Шрифты
 	--font-family-default: 'Inter', system-ui, sans-serif;
