--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,6 +26,14 @@
 @use 'blocks/page-footer';
 
 @use 'blocks/main-nav';
-@use 'blocks/modal';@use 'blocks/callback-button';
+@use 'blocks/modal';
+@use 'blocks/callback-button';
 @use 'blocks/heading';
 @use 'blocks/graphic-button';
+@use 'blocks/description';
+@use 'blocks/section-title';
+@use 'blocks/main-text';@use 'blocks/services';
+@use 'blocks/features';
+@use 'blocks/socials';
+@use 'blocks/callback-block';
+@use 'blocks/persi-button';
