feat: 🎸 Главная: адаптив

--- a/src/components/_base/_base-footer.html
+++ b/src/components/_base/_base-footer.html
@@ -47,14 +47,16 @@
   </div>
 
   <div class="footer-underline">
-    <span class="footer-underline__copyright">© 2023 Master Usc</span>
-    <a class="footer-underline__policy base-link" href="#">Политика конфиденциальности</a>
-    <a class="footer-underline__credits base-link" href="">
-      <span class="footer-underline__credits-text">Разработано</span>
-      <svg class="footer-underline__credits-icon" width="52" height="22" aria-hidden="true">
-        <use href="img/icon/sprite.svg#isart-icon"></use>
-      </svg>
-    </a>
+    <div class="footer-underline__container base-container">
+      <span class="footer-underline__copyright">© 2023 Master Usc</span>
+      <a class="footer-underline__policy base-link" href="#">Политика конфиденциальности</a>
+      <a class="footer-underline__credits base-link" href="#">
+        <span class="footer-underline__credits-text">Разработано</span>
+        <svg class="footer-underline__credits-icon" width="52" height="22" aria-hidden="true">
+          <use href="img/icon/sprite.svg#isart-icon"></use>
+        </svg>
+      </a>
+    </div>
   </div>
 </footer>
 
