--- a/src/components/_base/_base-header.html
+++ b/src/components/_base/_base-header.html
@@ -10,6 +10,7 @@
   <meta name="format-detection" content="address=no">
   <meta name="format-detection" content="email=no">
 
+  <base href="/">
   <link href="css/style.min.css?v=1.0" rel="stylesheet">
   <title></title>
 </head>
