--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,12 +29,13 @@
 @use 'blocks/modal';
 @use 'blocks/callback-button';
 @use 'blocks/heading';
-@use 'blocks/graphic-button';
 @use 'blocks/description';
 @use 'blocks/section-title';
-@use 'blocks/main-text';@use 'blocks/services';
+@use 'blocks/main-text';
+@use 'blocks/services';
 @use 'blocks/features';
 @use 'blocks/socials';
 @use 'blocks/callback-block';
 @use 'blocks/persi-button';
 @use 'blocks/footer-main';
+@use 'blocks/footer-underline';
