--- a/src/scss/blocks/callback-block.scss
+++ b/src/scss/blocks/callback-block.scss
@@ -7,9 +7,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @include mixins.respond-to(notDesktop) {
+      width: 100%;
+    }
   }
 
   &__title {
+    width: 100%;
+
+    padding: 0 5% 0 5%;
     margin: 0 0 30px 0;
   }
 
@@ -19,10 +26,19 @@
     display: flex;
     gap: 24px;
 
+    @include mixins.respond-to(notDesktop) {
+      flex-direction: column;
+    }
+
     & .persi-button {
       position: absolute;
       bottom: 11px;
       right: 28px;
+
+      @include mixins.respond-to(notDesktop) {
+        bottom: -50px;
+        right: 0;
+      }
     }
   }
 
@@ -30,10 +46,19 @@
     width: 50%;
     min-height: 574px;
 
+    @include mixins.respond-to(notDesktop) {
+      width: 100%;
+      min-height: auto;
+    }
+
     &--left {
       background-color: var(--color-elm);
 
       padding: 45px 40px;
+
+      @include mixins.respond-to(notDesktop) {
+        padding: 10px 5% 10px 5%;
+      }
     }
 
     &--right {
@@ -47,6 +72,11 @@
 
       padding: 0 0 68px 0;
       margin: 0 0 68px 0;
+
+      @include mixins.respond-to(notDesktop) {
+        padding: 0 0 34px 0;
+        margin: 0 0 34px 0;
+      }
 
       &::after {
         content: "";
@@ -79,6 +109,17 @@
 
     &-desc {
       padding: 52px 47px 0 40px;
+
+      @include mixins.respond-to(notDesktop) {
+        padding: 26px 23px 26px 20px;
+      }
+    }
+
+    &-img {
+      @include mixins.respond-to(notDesktop) {
+        width: 100%;
+        height: auto;
+      }
     }
   }
 
@@ -123,5 +164,4 @@
       }
     }
   }
-
 }
