--- a/src/scss/blocks/callback-button.scss
+++ b/src/scss/blocks/callback-button.scss
@@ -16,7 +16,7 @@
   line-height: 26px;
   color: var(--color-elm);
 
-  transition: background-color 0.3s;
+  transition: background-color 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 
   padding: 10px 5px;
 
@@ -24,6 +24,6 @@
     color: var(--color-black);
     background-color: var(--color-persimmon);
 
-    transition: color 0.3s, background-color 0.3s;
+    transition: color 0.3s, background-color 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
   }
 }
