--- a/src/scss/blocks/description.scss
+++ b/src/scss/blocks/description.scss
@@ -5,19 +5,29 @@
 
   padding: 93px 0 152px 0;
 
+  @include mixins.respond-to(notDesktop) {
+    padding: 41px 0 76px 0;
+  }
+
   &__container {
     display: flex;
     justify-content: space-between;
 
-    width: 100%;
+    // width: 100%;
+
+    @include mixins.respond-to(notDesktop) {
+      flex-direction: column;
+    }
   }
 
   &__column {
     &--left {
       margin: 0 161px 0 0;
-    }
 
-    &--right {}
+      @include mixins.respond-to(notDesktop) {
+        margin: 0 0 20px 0;
+      }
+    }
 
     &-title {
       display: inline-block;
@@ -27,6 +37,10 @@
       color: var(--color-silver-chalice);
 
       margin: 0 0 40px 0;
+
+      @include mixins.respond-to(notDesktop) {
+        margin: 0 0 20px 0;
+      }
     }
 
     &-text {
@@ -35,12 +49,21 @@
 
     &-image {
       margin: 0 0 21px 0;
+
+      @include mixins.respond-to(notDesktop) {
+        margin: 0 0 11px 0;
+      }
     }
 
     &-img {
       width: 526px;
       height: 272px;
       object-fit: cover;
+
+      @include mixins.respond-to(notDesktop) {
+        width: 100%;
+        height: auto;
+      }
     }
   }
 }
