--- a/src/scss/blocks/main-nav.scss
+++ b/src/scss/blocks/main-nav.scss
@@ -94,16 +94,20 @@
   &__container {
     display: flex;
     align-items: center;
+
+    @include mixins.respond-to(notDesktop) {
+      justify-content: space-between;
+    }
   }
 
   &__logo-link {
-    transition: transform 0.3s;
+    transition: transform 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 
     margin: 0 41px 0 0;
 
     &:hover {
-      transform: scale(1.05);
-      transition: transform 0.3s;
+      transform: scale(1.1);
+      transition: transform 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
     }
   }
 
@@ -162,12 +166,12 @@
     text-align: center;
     white-space: nowrap;
 
-    transition: color 0.1s;
+    transition: color 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 
     &:hover {
       color: var(--color-elm);
 
-      transition: color 0.1s;
+      transition: color 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
     }
 
     @include mixins.respond-to(notDesktop) {
@@ -184,6 +188,11 @@
     display: flex;
     align-items: center;
 
+    @include mixins.respond-to(notDesktop) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
     & .socials {
       margin: 0 37px 0 0;
     }
@@ -193,6 +202,10 @@
     display: flex;
 
     margin: 0 18px 0 0;
+
+    @include mixins.respond-to(notDesktop) {
+      margin: 0 0 20px 0;
+    }
   }
 
   &__lang-item {
@@ -203,7 +216,15 @@
     color: var(--color-silver);
     text-transform: uppercase;
 
-    transition: color 0.1s;
+    transition: color 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+
+    @include mixins.respond-to(notDesktop) {
+      margin: 0 20px 0 0;
+
+      & span {
+        display: none;
+      }
+    }
 
     & span {
       color: var(--color-silver);
@@ -211,7 +232,7 @@
 
     &:hover {
       color: var(--color-persimmon);
-      transition: color 0.1s;
+      transition: color 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 
       & span {
         color: var(--color-silver);
@@ -237,17 +258,21 @@
 
     margin: 0 23px 0 0;
 
+    @include mixins.respond-to(notDesktop) {
+      margin: 0 0 20px 0;
+    }
+
     &:hover {
       & .main-nav__phone-icon {
         filter: brightness(0) saturate(100%) invert(65%) sepia(56%) saturate(3855%) hue-rotate(327deg) brightness(103%) contrast(98%);
 
-        transition: filter 0.1s;
+        transition: filter 0.1s cubic-bezier(0.68, -0.6, 0.32, 1.6);
       }
 
       & .main-nav__phone-text {
         color: var(--color-persimmon);
 
-        transition: color 0.1s;
+        transition: color 0.1s cubic-bezier(0.68, -0.6, 0.32, 1.6);
       }
     }
   }
@@ -272,7 +297,7 @@
   &__nav-menu--mobile {
     @include mixins.respond-to(notDesktop) {
       position: absolute;
-      top: -24px;
+      top: 0;
       left: 0;
 
       display: flex;
@@ -287,9 +312,9 @@
       overscroll-behavior-y: contain;
 
       transform: translateX(-100%);
-      transition: transform 0.4s cubic-bezier(0.37, 0, 0.63, 1);
+      transition: transform 0.4s ease-in-out;
 
-      padding: 23px 5%;
+      padding: 9px 5%;
 
       z-index: 15;
     }
@@ -297,7 +322,7 @@
 
   &__nav-menu--mobile--active {
     transform: translateX(0);
-    transition: transform 0.4s cubic-bezier(0.37, 0, 0.63, 1)
+    transition: transform 0.4s ease-in-out;
   }
 
   &__burger {
@@ -344,7 +369,7 @@
       animation-name: burger_before_default;
       animation-fill-mode: forwards;
 
-      transition: all 0.4s
+      transition: all 0.4s cubic-bezier(0.68, -0.6, 0.32, 1.6);
     }
 
     &::after {
@@ -363,7 +388,7 @@
       animation-name: burger_after_default;
       animation-fill-mode: forwards;
 
-      transition: all 0.4s
+      transition: all 0.4s cubic-bezier(0.68, -0.6, 0.32, 1.6);
     }
   }
 
@@ -378,13 +403,13 @@
     animation-name: burger_after;
     animation-fill-mode: forwards;
 
-    transition: all 0.4s
+    transition: all 0.4s cubic-bezier(0.68, -0.6, 0.32, 1.6);
   }
 
   &__burger--active .main-nav__burger-line {
     background-color: transparent;
 
     transition-delay: 0.4s;
-    transition: background-color 0.1s
+    transition: background-color 0.1s cubic-bezier(0.68, -0.6, 0.32, 1.6);
   }
 }
