--- a/src/scss/blocks/persi-button.scss
+++ b/src/scss/blocks/persi-button.scss
@@ -24,4 +24,9 @@
     transform: scale(1.1);
     transition: transform 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
   }
+
+  @include mixins.respond-to(notDesktop) {
+    width: 110px;
+    height: 110px;
+  }
 }
