--- a/src/scss/blocks/section-title.scss
+++ b/src/scss/blocks/section-title.scss
@@ -5,4 +5,9 @@
   font-weight: 700;
   font-size: 50px;
   line-height: 50px;
+
+  @include mixins.respond-to(notDesktop) {
+    font-size: 35px;
+    line-height: 35px;
+  }
 }
