--- a/src/scss/blocks/services.scss
+++ b/src/scss/blocks/services.scss
@@ -5,7 +5,12 @@
   flex-direction: column;
   align-items: flex-start;
 
-  background-color: var(--color-elm);
+  min-height: 816px;
+  background: url('../../img/image/services-image.png') var(--color-elm);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
   padding: 75px 0;
 
@@ -27,11 +32,20 @@
     width: 100%;
     max-width: 100%;
 
+    @include mixins.respond-to(notDesktop) {
+      padding: 0 5%;
+    }
+
     &-slide {
       display: flex;
 
       width: 1296px !important;
       height: 527px !important;
+
+      @include mixins.respond-to(notDesktop) {
+        width: 100% !important;
+        height: auto !important;
+      }
     }
 
     & .swiper-slide {
@@ -75,6 +89,10 @@
 
       z-index: 20;
 
+      @include mixins.respond-to(notDesktop) {
+        width: calc(95%);
+      }
+
       & .slider-arrow {
         display: flex;
         align-items: center;
@@ -96,12 +114,21 @@
           background-color: var(--color-persimmon);
           transition: background-color 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
         }
+
+        @include mixins.respond-to(notDesktop) {
+          width: 45px;
+          height: 45px;
+        }
       }
     }
 
     @media(min-width: '1296px') {
       &-arrows {
         width: calc(1296px + 90px);
+
+        @include mixins.respond-to(notDesktop) {
+          width: 100%;
+        }
       }
     }
   }
@@ -120,6 +147,10 @@
       &:last-child {
         padding: 0 24px 0 0;
         margin: 0;
+
+        @include mixins.respond-to(notDesktop) {
+          padding: 0;
+        }
       }
 
       &:only-child .services__slide-img {
@@ -130,7 +161,7 @@
     &-image {
       width: 100%;
 
-      margin: 0 0 23px 0;
+      margin: 0 0 15px 0;
     }
 
     &-img {
@@ -139,6 +170,11 @@
       height: 440px;
       min-height: 440px;
       object-fit: cover;
+
+      @include mixins.respond-to(notDesktop) {
+        width: 100%;
+        min-width: auto;
+      }
     }
 
     &-info {
