--- a/src/scss/blocks/main-nav.scss
+++ b/src/scss/blocks/main-nav.scss
@@ -114,7 +114,7 @@
   &__logo-link--mobile {
     display: none;
 
-    margin: 0 0 40px 0;
+    margin: 0 0 30px 0;
 
     @include mixins.respond-to(notDesktop) {
       display: inline-block;
@@ -140,7 +140,7 @@
 
       width: 100%;
 
-      margin: 0 0 40px 0
+      margin: 0;
     }
   }
 
@@ -179,7 +179,8 @@
 
       width: 100%;
 
-      font-size: 22px;
+      font-size: 28px;
+      text-transform: uppercase;
       text-align: left;
     }
   }
@@ -191,6 +192,8 @@
     @include mixins.respond-to(notDesktop) {
       flex-direction: column;
       align-items: flex-start;
+
+      margin: auto 0 0 0;
     }
 
     & .socials {
@@ -204,7 +207,7 @@
     margin: 0 18px 0 0;
 
     @include mixins.respond-to(notDesktop) {
-      margin: 0 0 20px 0;
+      margin: 0 0 15px 0;
     }
   }
 
@@ -218,13 +221,13 @@
 
     transition: color 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 
-    @include mixins.respond-to(notDesktop) {
-      margin: 0 20px 0 0;
+    // @include mixins.respond-to(notDesktop) {
+    //   margin: 0 20px 0 0;
 
-      & span {
-        display: none;
-      }
-    }
+    //   & span {
+    //     display: none;
+    //   }
+    // }
 
     & span {
       color: var(--color-silver);
@@ -259,7 +262,7 @@
     margin: 0 23px 0 0;
 
     @include mixins.respond-to(notDesktop) {
-      margin: 0 0 20px 0;
+      margin: 0 0 15px 0;
     }
 
     &:hover {
@@ -305,7 +308,7 @@
       align-items: flex-start;
 
       width: 100vw;
-      height: calc(100vh);
+      height: 100vh;
       background-color: var(--color-mine-shaft);
       overflow: auto;
       -webkit-overflow-scrolling: touch;
@@ -314,7 +317,7 @@
       transform: translateX(-100%);
       transition: transform 0.4s ease-in-out;
 
-      padding: 9px 5%;
+      padding: 8px 5%;
 
       z-index: 15;
     }
