feat: 🎸 Главная: адаптив

--- a/src/components/_base/_base-header.html
+++ b/src/components/_base/_base-header.html
@@ -28,11 +28,11 @@
 
         <div class="main-nav__nav-menu main-nav__nav-menu--mobile" id="mobile_menu">
 
-          <a class="main-nav__logo-link main-nav__logo-link--mobile base-link" href="index.html">
+          <!-- <a class="main-nav__logo-link main-nav__logo-link--mobile base-link" href="index.html">
             <svg class="main-nav__logo-icon" width="127" height="92" alt="Логотип">
               <use href="img/icon/sprite.svg#logo-icon"></use>
             </svg>
-          </a>
+          </a> -->
 
           <ul class="main-nav__nav-list base-list">
             <li class="main-nav__nav-item">
