--- a/src/scss/blocks/heading.scss
+++ b/src/scss/blocks/heading.scss
@@ -174,6 +174,8 @@
     justify-content: flex-start;
 
     @include mixins.respond-to(notDesktop) {
+      display: none;
+
       padding: 0 5%;
     }
 
