--- a/src/scss/blocks/main-nav.scss
+++ b/src/scss/blocks/main-nav.scss
@@ -135,10 +135,15 @@
     margin: 0 116px 0 0;
 
     @include mixins.respond-to(notDesktop) {
+      position: relative;
+      top: 40%;
+
       flex-direction: column;
       align-items: flex-start;
 
       width: 100%;
+
+      transform: translateY(-50%);
 
       margin: 0;
     }
@@ -180,6 +185,7 @@
       width: 100%;
 
       font-size: 28px;
+      font-weight: 900;
       text-transform: uppercase;
       text-align: left;
     }
@@ -207,7 +213,11 @@
     margin: 0 18px 0 0;
 
     @include mixins.respond-to(notDesktop) {
-      margin: 0 0 15px 0;
+      position: absolute;
+      top: 43px;
+      left: 5%;
+
+      // margin: 0 0 15px 0;
     }
   }
 
@@ -221,13 +231,13 @@
 
     transition: color 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 
-    // @include mixins.respond-to(notDesktop) {
-    //   margin: 0 20px 0 0;
+    @include mixins.respond-to(notDesktop) {
+      // margin: 0 20px 0 0;
 
-    //   & span {
-    //     display: none;
-    //   }
-    // }
+      // & span {
+      //   display: none;
+      // }
+    }
 
     & span {
       color: var(--color-silver);
@@ -299,7 +309,7 @@
 
   &__nav-menu--mobile {
     @include mixins.respond-to(notDesktop) {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
 
@@ -308,7 +318,7 @@
       align-items: flex-start;
 
       width: 100vw;
-      height: 100vh;
+      height: -webkit-fill-available;
       background-color: var(--color-mine-shaft);
       overflow: auto;
       -webkit-overflow-scrolling: touch;
@@ -317,7 +327,7 @@
       transform: translateX(-100%);
       transition: transform 0.4s ease-in-out;
 
-      padding: 8px 5%;
+      padding: 8px 5% 48px 5%;
 
       z-index: 15;
     }
