--- a/src/scss/blocks/heading.scss
+++ b/src/scss/blocks/heading.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
 
-  min-height: 739px;
+  background-color: var(--color-mine-shaft);
 
   padding: 120px 0 0 0;
 
@@ -110,6 +110,31 @@
         height: auto;
       }
     }
+
+    &-arrows {
+      position: absolute;
+      bottom: 122px;
+      left: 50%;
+
+      display: none;
+      align-items: center;
+      justify-content: space-between;
+
+      width: calc(95%);
+      height: fit-content;
+      pointer-events: none;
+      user-select: none;
+
+      transform: translateX(-50%);
+
+      margin: 0 auto;
+
+      z-index: 20;
+
+      @include mixins.respond-to(notDesktop) {
+        display: flex;
+      }
+    }
   }
 
   &__slide {
@@ -206,6 +231,14 @@
   &__thumbnail-slide {
     width: 155px !important;
     height: 86px !important;
+    cursor: pointer;
+
+    transition: transform 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+
+    &:hover {
+      transform: scale(1.1);
+      transition: transform 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+    }
   }
 
   &__thumbnail-pagination {
