--- a/src/scss/blocks/modal.scss
+++ b/src/scss/blocks/modal.scss
@@ -31,8 +31,8 @@
     flex-direction: column;
     align-items: center;
 
-    width: 510px;
-    height: 480px;
+    width: 509px;
+    height: 497px;
     background-color: var(--color-white);
     border-radius: 6px;
 
@@ -86,62 +86,41 @@
     &--hidden {
       display: none;
     }
-  }
 
-  &__title {
-    font-family: var(--font-family-second);
-    font-weight: 700;
-    font-size: 25px;
-    line-height: 37px;
-    text-transform: uppercase;
+    &-title {
+      font-family: var(--font-family-second);
+      font-weight: 700;
+      font-size: 25px;
+      line-height: 37px;
+      text-transform: uppercase;
 
-    margin: 0 0 22px 0;
-  }
-
-  &__order {
-    position: relative;
-
-    width: 100%;
-
-    text-align: center;
-
-    padding: 0 0 15px 0;
-    margin: 0 0 20px 0;
-
-    &::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-
-      width: 100%;
-      height: 2px;
-      background: #D9D9D9;
+      margin: 0 0 22px 0;
     }
 
-    &-category {
+    &-subtitle {
       font-weight: 400;
       font-size: 16px;
       line-height: 24px;
-      color: #303030;
+      text-align: center;
+
+      margin: 0 0 15px 0;
     }
 
-    &-name {
-      font-weight: 900;
-      font-size: 16px;
-      line-height: 24px;
-      color: #303030;
+    &-form {
+      position: relative;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      width: 100%;
+
+      &::before {}
     }
   }
 
-  &__form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-
-  &__input {
+  &__form-input {
     width: 100%;
     height: 52px;
 
@@ -153,14 +132,6 @@
     line-height: 22px;
 
     padding: 15px 10px;
-
-    &--name {
-      margin: 0 0 26px 0;
-    }
-
-    &--phone {
-      margin: 0 0 15px 0;
-    }
 
     &--check:checked+.modal-order__check-text::before {
       background: url('../img/image/modal-check-icon.svg') var(--color-selective-yellow);
