--- a/src/scss/blocks/persi-button.scss
+++ b/src/scss/blocks/persi-button.scss
@@ -16,7 +16,7 @@
   font-size: 23px;
   line-height: 37px;
   text-align: center;
-  color: var(--color-white);
+  color: var(--color-black);
 
   transition: transform 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 
@@ -30,5 +30,6 @@
     height: 110px;
 
     font-size: 18px !important;
+    line-height: 22px !important;
   }
 }
