--- a/src/scss/blocks/features.scss
+++ b/src/scss/blocks/features.scss
@@ -109,7 +109,7 @@
       font-weight: 400;
       font-size: 20px;
       line-height: 24px;
-      color: var(--color-white);
+      color: var(--color-black);
 
       @include mixins.respond-to(notDesktop) {
         order: 1;
