--- a/src/scss/blocks/persi-button.scss
+++ b/src/scss/blocks/persi-button.scss
@@ -17,12 +17,14 @@
   line-height: 37px;
   text-align: center;
   color: var(--color-black);
+  transform: scale(0);
 
-  transition: transform 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+  transition: background-color 0.3s;
 
   &:hover {
-    transform: scale(1.1);
-    transition: transform 0.3s cubic-bezier(0.68, -0.6, 0.32, 1.6);
+    background-color: var(--color-persimmon);
+
+    transition: background-color 0.3s;
   }
 
   @include mixins.respond-to(notDesktop) {
