--- a/src/components/_base/_base-header.html
+++ b/src/components/_base/_base-header.html
@@ -10,7 +10,7 @@
   <meta name="format-detection" content="address=no">
   <meta name="format-detection" content="email=no">
 
-  <link href="css/style.min.css?v=1.1" rel="stylesheet">
+  <link href="css/style.min.css?v=1.2" rel="stylesheet">
   <title></title>
 </head>
 
@@ -91,7 +91,7 @@
         </p>
         <form class="modal-callback__inner-form" id="modal_callback_form">
           <input class="modal-callback__form-input" type="text" name="name" placeholder="Имя" required>
-          <input class="modal-callback__form-input" type="phone" name="phone" placeholder="Телефон" required>
+          <input class="modal-callback__form-input" type="tel" name="phone" placeholder="Телефон" required>
           <input class="modal-callback__form-input modal-callback__form-input--check visually-hidden" type="checkbox" id="check" checked required>
           <label class="modal-callback__form-label" for="check">
             Я согласен(на) с <a href="#">обработкой персональных данных</a>
