--- a/src/scss/blocks/section-title.scss
+++ b/src/scss/blocks/section-title.scss
@@ -5,6 +5,7 @@
   font-weight: 700;
   font-size: 50px;
   line-height: 50px;
+  color: var(--color-silver-chalice);
 
   @include mixins.respond-to(notDesktop) {
     font-size: 35px;
