--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @use 'global/variables';
 @use 'node_modules/swiper/swiper-bundle.min.css';
 @use 'node_modules/aos/dist/aos.css';
+@use 'node_modules/@fancyapps/ui/dist/fancybox/fancybox.css';
 
 //Миксины
 @use 'mixins/font-face';
