--- a/src/scss/blocks/services.scss
+++ b/src/scss/blocks/services.scss
@@ -7,12 +7,15 @@
 
   min-height: 816px;
   background: url('../../img/image/services-image.png') var(--color-elm);
-  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 
-  padding: 75px 0;
+  padding: 50px 0;
+
+  @include mixins.respond-to(notDesktop) {
+    min-height: auto;
+  }
 
   &__container {
     display: flex;
