fix: 🐛 Добавил фавикон, исправления

--- a/src/scss/blocks/services.scss
+++ b/src/scss/blocks/services.scss
@@ -6,7 +6,7 @@
   align-items: flex-start;
 
   min-height: 816px;
-  background: url('../../img/image/services-image.png') var(--color-elm);
+  background: url('../img/image/services-image.png') var(--color-elm);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
