--- a/src/scss/blocks/callback-block.scss
+++ b/src/scss/blocks/callback-block.scss
@@ -22,8 +22,11 @@
   &__title {
     width: 100%;
 
-    padding: 0 5% 0 5%;
     margin: 0 0 30px 0;
+
+    @include mixins.respond-to(notDesktop) {
+      padding: 0 5% 0 5%;
+    }
   }
 
   &__wrapper {
