--- a/src/scss/blocks/heading.scss
+++ b/src/scss/blocks/heading.scss
@@ -145,10 +145,17 @@
 
       max-width: 545px;
 
-      color: var(--color-white);
-
       padding: 109px 0 0 0;
       margin: 0 20px 20px 0;
+
+      & h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        color: var(--color-white);
+      }
 
       @include mixins.respond-to(notDesktop) {
         padding: 50px 0 0 0;
