--- a/src/scss/blocks/callback-block.scss
+++ b/src/scss/blocks/callback-block.scss
@@ -4,9 +4,11 @@
   background-color: var(--color-white);
 
   // padding: 0 0 100px 0;
+  margin: 0 0 60px 0;
 
   @include mixins.respond-to(notDesktop) {
     // padding: 0 0 50px 0;
+    margin: 0 0 30px 0;
   }
 
   &__container {
