--- a/src/scss/blocks/features.scss
+++ b/src/scss/blocks/features.scss
@@ -3,7 +3,7 @@
 .features {
   background-color: var(--color-white);
 
-  padding: 100px 0;
+  padding: 100px 0 50px 0;
 
   @include mixins.respond-to(notDesktop) {
     padding: 50px 0;
@@ -15,6 +15,8 @@
   }
 
   &__title {
+    max-width: 725px;
+
     color: var(--color-silver-chalice);
 
     margin: 0 0 41px 0;
