--- a/src/scss/blocks/services.scss
+++ b/src/scss/blocks/services.scss
@@ -11,10 +11,12 @@
   background-repeat: no-repeat;
   background-size: cover;
 
-  padding: 50px 0;
+  padding: 77px 0;
 
   @include mixins.respond-to(notDesktop) {
     min-height: auto;
+
+    padding: 50px 0;
   }
 
   &__container {
@@ -24,9 +26,18 @@
   }
 
   &__title {
-    color: var(--color-white);
+    max-width: 1005px;
 
     margin: 0 0 30px 0;
+
+    & h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      color: var(--color-white);
+    }
   }
 
   &__slider {
